phase 0 of migration
* asf parent pom
* updated cyclone dx
* build timestamp support.